<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">
        <Preference
            android:enabled="true"
            android:key="Version"
            android:selectable="true"
            android:summary="1.0.0"
            android:title="@string/version"/>
        <Preference
            android:enabled="true"
            android:key="Licence"
            android:selectable="true"
            android:title="@string/licence"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/action_rate">
        <Preference
            android:key="rate"
            android:summary="@string/support_message"
            android:title="@string/rate"/>
        <Preference
            android:key="feedback"
            android:title="@string/action_feedback"/>
        <Preference
            android:key="share"
            android:title="@string/share"/>

    </PreferenceCategory>
</PreferenceScreen>