<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_high_resolution"
        android:title="@string/action_high_resolution"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"/>
    <!--<item-->
        <!--android:id="@+id/action_feedback"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_feedback"-->
        <!--app:showAsAction="never"/>-->
    <!--<item-->
        <!--android:id="@+id/action_rate"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_rate"-->
        <!--app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete_all"
        app:showAsAction="never"/>
</menu>
