<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wartechwick.instasave.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/insta_recyler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_empty_view"
            android:textColor="@color/instagram_bold_font"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btn_goto_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_instagram"
            android:textColor="@color/instagram_bold_font"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:theme="@style/Theme.MaterialButton"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="66dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_instagram"
        app:backgroundTint="#ed4956"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
